--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "chaincode-form-builder-validation",
-  "version": "0.1.1",
+  "name": "chaincodeformbuildervalidation",
+  "version": "0.8.11",
   "description": "A complete form builder for react.",
   "main": "lib/index.js",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rahulchaincode/react-form-builder-validation.git"
+    "url": "https://github.com/rahulchaincode/react-form-builder-validation.git"
   },
   "files": [
     "lib",
@@ -37,7 +37,7 @@
     "react-datepicker": "^3.4.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
-    "react-draft-wysiwyg": "~1.13.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-select": "^3.2.0",
     "react-signature-canvas": "^1.0.3",
     "react-star-rating": "^1.4.2",
@@ -49,7 +49,7 @@
     "react-dom": ">=16.8.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
+    "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-json-strings": "^7.12.1",
@@ -71,15 +71,15 @@
     "eslint-plugin-react": "^7.22.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^12.1.0",
     "style-loader": "^1.3.0",
-    "webpack": "^4.46.0",
+    "webpack": "^5.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^1.16.5"
   },
   "scripts": {
     "build": "webpack -p --config webpack.production.config.js",
