--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chaincodeformbuildervalidation",
-  "version": "0.9.10",
+  "version": "0.9.13",
   "description": "A complete form builder for react.",
   "main": "lib/index.js",
   "license": "MIT",
@@ -21,8 +21,9 @@
     "drag",
     "drop"
   ],
-  "author": "Chaincode",
+  "author": "Kiho Chang",
   "dependencies": {
+    "@next-tools/dynamic": "^0.0.11",
     "beedle": "^0.8.1",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
@@ -37,7 +38,7 @@
     "react-datepicker": "^3.4.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
-    "react-draft-wysiwyg": "^1.14.7",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-select": "^3.2.0",
     "react-signature-canvas": "^1.0.3",
     "react-star-rating": "^1.4.2",
@@ -78,8 +79,7 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^1.3.0",
     "webpack": "^5.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^1.16.5"
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "build": "webpack -p --config webpack.production.config.js",
