--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chaincodeformbuildervalidation",
-  "version": "0.9.13",
+  "version": "0.9.14",
   "description": "A complete form builder for react.",
   "main": "lib/index.js",
   "license": "MIT",
@@ -33,6 +33,7 @@
     "fbemitter": "^3.0.0",
     "immutability-helper": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
+    "next": "^11.0.1",
     "prop-types": "^15.7.2",
     "react-bootstrap-slider": "^2.2.3",
     "react-datepicker": "^3.4.1",
@@ -43,6 +44,7 @@
     "react-signature-canvas": "^1.0.3",
     "react-star-rating": "^1.4.2",
     "react-textarea-autosize": "^7.1.2",
+    "webpack-dev-server": "^3.11.2",
     "xss": "^1.0.8"
   },
   "peerDependencies": {
@@ -79,7 +81,8 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^1.3.0",
     "webpack": "^5.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "build": "webpack -p --config webpack.production.config.js",
